--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <!--fin del header-->
     <div class="presentacion container-fluid">
-        <div class="main-title">
+        <div class="main-title text-center">
             Contabilidad S.A
         </div>
         <div class="">
