sección de 'servicios' em el index y sección de 'nuestro equipo'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <!--Header-->
     <header class="container-fluid bg-main">
-        <div class="banner font-main">
+        <div class="banner font-main text-white">
             Contabilidad S.A
         </div>
     </header>
@@ -28,6 +28,9 @@
             </li>
             <li class="nav-item my-2">
                 <a class="nav-link-main" href="#">ÁREAS DE COMPETENCIA</a>
+            </li>
+            <li class="nav-item my-2">
+                <a class="nav-link-main" href="#">NOTICIAS</a>
             </li>
             <li class="nav-item my-2">
                 <a class="nav-link-main" href="#">CONTACTO</a>
@@ -44,6 +47,74 @@
         </div>
     </div>
 
+    <!--Contenido princpial-->
+
+    <main class="my-5 py-4">
+
+        <!--resumen de servicios-->
+        <div class="container">
+            <div class="title2">
+                SERVICIOS
+            </div>
+        </div>
+        <div class="container my-5 position-relative">
+            <div class="row row-cols-1 row-cols-md-3 g-4 animationSideIn">
+                <div class="col">
+                  <div class="card shadow-sm">
+                    <img src="./assets/imgs/photo1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title border-bottom">Impuestos</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <a href="#" class="btn btn-main my-3">Mas</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card shadow-sm">
+                    <img src="./assets/imgs/photo2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title border-bottom">Asesoría</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <a href="#" class="btn btn-main my-3">Mas</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card shadow-sm">
+                    <img src="./assets/imgs/photo3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body border-bottom">
+                      <h5 class="card-title border-bottom">Administración financiera</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      <a href="#" class="btn btn-main my-3">Mas</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <a href="#" class="btn btn-main my-3">Ver todos</a>
+        </div>
+        <!--fin de resumen de servicios-->
+
+        <div class="container">
+            <div class="title2">
+                NUESTRO EQUIPO
+            </div>
+            <div class="row my-5">
+                <div class="col-5 p-3 border shadow picture bg-light animationOut-In">
+                    <img src="./assets//imgs/team_work2.jpg" width="100%" alt="">
+                </div>
+                <div class="col-6">
+                    <h2>El equipo de trabajo</h2>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore consequatur iure quasi. Odit nobis ratione ipsum dicta labore rem rerum tenetur, natus eius suscipit recusandae facere explicabo eos maiores dolorem.
+                </div>
+                
+            </div>
+        </div>
+
+
+
+    </main>
+
+    <!--fin contenido principal-->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
