página index completada

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
             <div class="row-cols-1 my-5">
                 <div class="col-12 p-2">
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <div class="card mx-3" style="max-width: 540px;">
                             <div class="row g-0">
                               <div class="col-md-4">
@@ -159,12 +159,12 @@
         </div>
         <!--fin de ultimas noticias-->
 
-        <div class="container-fluid my-5 bg-main-blue final-info">
-            <div class="container text-white p-2">
-                <div class="row">
-                    <div class="col-8">
-                        <h3 class="border-bottom border-light">Testimonios</h3>
-                        <div class="row">
+        <div class="container-fluid my-5 final-info">
+            <div class="container p-2">
+                <div class="row p-2">
+                    <div class="col-6">
+                        <h3 class="border-bottom border-primary">Testimonios</h3>
+                        <div class="row flexbox-testi">
                             <div class="col-4 testi">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, nesciunt?</p>
                                 <span class="user">- Usuario -</span>
@@ -175,9 +175,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <h3 class="border-bottom border-light">Socios</h3>
-                        
+                    <div class="col-4 bg-main-blue text-white rounded">
+                        <h3 class="border-bottom border-light">Áreas de competencia</h3>
+                        <ul class="a-comp">
+                            <li class="my-3">Impuestos</li>
+                            <li class="my-3">Liquidaciones de Sueldos</li>
+                            <li class="my-3">Administración financiera</li>
+                            <li class="my-3">Selección de entidades</li>
+                            <li class="my-3">Software de contabilidad</li>
+                            <li class="my-3">Software de Asesoría</li>
+                            <li><a href="" class="btn btn-main">Ver Todas</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -186,6 +194,40 @@
 
 
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="info-footer col-12 my-4">
+                    <div class="row justify-content-center">
+                        <div class="contacto-footer col-4">
+                            <h3>Contáctanos</h3>
+                            <p>
+                                <ul>
+                                    <small>
+                                        <li><span class="text-grey">Tel</span>: 5132-4498</li>
+                                        <li><span class="text-grey">Email: </span>info@contabilidadsa.com</li>
+                                        <li><span class="text-grey">Dirección:</span> Av. San Martín 2327 CABA</li>
+                                    </small>
+                                </ul>
+                            </p>
+                        </div>
+                        <div class="redes col-4">
+                            <h3>Encuentranos en</h3>
+                            <div>
+                                <a href="#" class="mx-2"><img src="./assets/imgs/redes/fc.png" class="my-2" width="30px" title="Facebook" alt="facebook"></a>
+                                <a href="#" class="mx-2"><img src="./assets/imgs/redes/tw.png" class="my-2" width="30px" title="Twitter" alt="twitter"></a>
+                                <a href="#" class="mx-2"><img src="./assets/imgs/redes/ln.png" class="my-2" width="30px" title="Linkedin" alt="linkedin"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer col-12 text-center">
+                    &copy; 2021 - Contabilidad S.A
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!--fin contenido principal-->
 
