--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/main-icon.ico" type="image/x-icon"> 
 </head>
 <body>
     
@@ -21,10 +22,10 @@
     <div class="nav-bar">
         <ul class="nav justify-content-center">
             <li class="nav-item my-2">
-              <a class="nav-link-main" href="#">INICIO</a>
+              <a class="nav-link-main" href="index.html">INICIO</a>
             </li>
             <li class="nav-item my-2">
-                <a class="nav-link-main" href="#">QUIÉNES SOMOS</a>
+                <a class="nav-link-main" href="about.html">QUIÉNES SOMOS</a>
             </li>
             <li class="nav-item my-2">
                 <a class="nav-link-main" href="#">ÁREAS DE COMPETENCIA</a>
@@ -64,7 +65,7 @@
                     <img src="./assets/imgs/photo1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title border-bottom">Impuestos</h5>
-                      <p class="card-text">Descripción.This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text text-secondary">Descripción.This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       <a href="#" class="btn btn-main my-3">Mas</a>
                     </div>
                   </div>
@@ -74,7 +75,7 @@
                     <img src="./assets/imgs/photo2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title border-bottom">Asesoría</h5>
-                      <p class="card-text">Descripción. This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text text-secondary">Descripción. This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       <a href="#" class="btn btn-main my-3">Mas</a>
                     </div>
                   </div>
@@ -84,7 +85,7 @@
                     <img src="./assets/imgs/photo3.jpg" class="card-img-top" alt="...">
                     <div class="card-body border-bottom">
                       <h5 class="card-title border-bottom">Administración financiera</h5>
-                      <p class="card-text">Descripción. This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      <p class="card-text text-secondary">Descripción. This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                       <a href="#" class="btn btn-main my-3">Mas</a>
                     </div>
                   </div>
@@ -105,8 +106,8 @@
                 </div>
                 <div class="col-6">
                     <h2 class="border-bottom">El equipo de trabajo</h2>
-                    <p>Descripción.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore consequatur iure quasi. Odit nobis ratione ipsum dicta labore rem rerum tenetur, natus eius suscipit recusandae facere explicabo eos maiores dolorem.</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut consequuntur doloremque quis nihil, nesciunt exercitationem voluptates aliquid porro magnam id mollitia sunt. Magni totam quaerat velit quo, sit nemo cumque?</p>
+                    <p class="text-secondary">Descripción.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore consequatur iure quasi. Odit nobis ratione ipsum dicta labore rem rerum tenetur, natus eius suscipit recusandae facere explicabo eos maiores dolorem.</p>
+                    <p class="text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut consequuntur doloremque quis nihil, nesciunt exercitationem voluptates aliquid porro magnam id mollitia sunt. Magni totam quaerat velit quo, sit nemo cumque?</p>
                 </div>
             </div>
         </div>
@@ -128,7 +129,7 @@
                               <div class="col-md-8">
                                 <div class="card-body">
                                   <h5 class="card-title"><strong>Noticia 1</strong></h5>
-                                  <p class="card-text">Descripción. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo adipisci, animi at sit nostrum voluptas!</p>
+                                  <p class="card-text text-secondary">Descripción. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo adipisci, animi at sit nostrum voluptas!</p>
                                   <p class="card-text"><small class="text-muted">Publicada hace 9 horas</small></p>
                                   <a href="#" class="btn btn-main">ver</a>
                                   
@@ -145,7 +146,7 @@
                               <div class="col-md-8">
                                 <div class="card-body">
                                   <h5 class="card-title"><strong>Noticia 2</strong></h5>
-                                  <p class="card-text">Descripción. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo adipisci, animi at sit nostrum voluptas!</p>
+                                  <p class="card-text text-secondary">Descripción. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo adipisci, animi at sit nostrum voluptas!</p>
                                   <p class="card-text"><small class="text-muted">Publicada hace 1 Día</small></p>
                                   <a href="#" class="btn btn-main">ver</a>
                                 </div>
@@ -173,10 +174,14 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, nesciunt?</p>
                                 <span class="user">- Usuario -</span>
                             </div>
+                            <div class="col-4 testi">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, nesciunt?</p>
+                                <span class="user">- Usuario -</span>
+                            </div>
                         </div>
                     </div>
                     <div class="col-4 bg-main-blue text-white rounded">
-                        <h3 class="border-bottom border-light">Áreas de competencia</h3>
+                        <h3 class="border-bottom p-2 border-light">Áreas de competencia</h3>
                         <ul class="a-comp">
                             <li class="my-3">Impuestos</li>
                             <li class="my-3">Liquidaciones de Sueldos</li>
