página info-areas y página noticias agregadas

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <a class="nav-link-main" href="about.html">QUIÉNES SOMOS</a>
             </li>
             <li class="nav-item my-2">
-                <a class="nav-link-main" href="#">ÁREAS DE COMPETENCIA</a>
+                <a class="nav-link-main" href="info-areas.html">ÁREAS DE COMPETENCIA</a>
             </li>
             <li class="nav-item my-2">
                 <a class="nav-link-main" href="#">NOTICIAS</a>
@@ -76,6 +76,7 @@
 
                 <div class="col-3 border rounded p-3 mx-1 bg-white">
                     <div>
+                        <div class="bg-main firma my-2"> Contabilidad S.A </div>
                         <h4 class="border-bottom border-primary">Nuestra Firma</h4>
                         <p class="text-secondary">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio praesentium accusantium at velit iste ipsam mollitia beatae facilis officiis enim labore voluptatum itaque reprehenderit, nostrum placeat alias. Nesciunt, consequuntur a.
