--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <a class="nav-link-main" href="about.html">QUIÉNES SOMOS</a>
             </li>
             <li class="nav-item my-2">
-                <a class="nav-link-main" href="#">ÁREAS DE COMPETENCIA</a>
+                <a class="nav-link-main" href="info-areas.html">ÁREAS DE COMPETENCIA</a>
             </li>
             <li class="nav-item my-2">
-                <a class="nav-link-main" href="#">NOTICIAS</a>
+                <a class="nav-link-main" href="noticias.html">NOTICIAS</a>
             </li>
             <li class="nav-item my-2">
                 <a class="nav-link-main" href="#">CONTACTO</a>
