página contacto agregada

--- a/noticias.html
+++ b/noticias.html
@@ -34,7 +34,7 @@
                 <a class="nav-link-main" href="noticias.html">NOTICIAS</a>
             </li>
             <li class="nav-item my-2">
-                <a class="nav-link-main" href="#">CONTACTO</a>
+                <a class="nav-link-main" href="contacto.html">CONTACTO</a>
             </li>
         </ul>
     </div>
@@ -42,10 +42,10 @@
 
     <!--Contenido princpial-->
 
-    <main class="my-5 py-4">
+    <main class="container bg-white shadow-sm my-5 py-4">
 
         <!--resumen de servicios-->
-        <div class="container bg-white shadow-sm">
+        <div class="container">
             <div class="title2">
                 NOTICIAS Y PUBLICACIONES
             </div>
