--- a/about.html
+++ b/about.html
@@ -30,15 +30,15 @@
                 <a class="nav-link-main" href="info-areas.html">ÁREAS DE COMPETENCIA</a>
             </li>
             <li class="nav-item my-2">
-                <a class="nav-link-main" href="#">NOTICIAS</a>
+                <a class="nav-link-main" href="noticias.html">NOTICIAS</a>
             </li>
             <li class="nav-item my-2">
-                <a class="nav-link-main" href="#">CONTACTO</a>
+                <a class="nav-link-main" href="contacto.html">CONTACTO</a>
             </li>
         </ul>
     </div>
 
-    <main>
+    <main class="container bg-white shadow-sm my-5 py-4">
         <div class="container my-5">
             <div class="title2">
                 QUIÉNES SOMOS
