--- a/info-areas.html
+++ b/info-areas.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/main-icon.ico" type="image/x-icon"> 
 </head>
-<body>
+<body class="bg-light">
     
     <!--Header-->
     <header class="container-fluid bg-main">
@@ -34,7 +34,7 @@
                 <a class="nav-link-main" href="noticias.html">NOTICIAS</a>
             </li>
             <li class="nav-item my-2">
-                <a class="nav-link-main" href="#">CONTACTO</a>
+                <a class="nav-link-main" href="contacto.html">CONTACTO</a>
             </li>
         </ul>
     </div>
@@ -42,7 +42,7 @@
 
     <!--Contenido princpial-->
 
-    <main class="my-5 py-4">
+    <main class="container bg-white shadow-sm my-5 py-4">
 
         <!--resumen de servicios-->
         <div class="container">
