--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </ul>
     </div>
 
-    <main class="container bg-white shadow-sm my-5 py-4">
+    <main class="container bg-white shadow-sm my-5 py-4 animationSideIn">
         <div class="container my-5">
             <div class="title2">
                 QUIÉNES SOMOS
