--- a/contacto.html
+++ b/contacto.html
@@ -42,7 +42,7 @@
 
     <!--Contenido princpial-->
 
-    <main class="container bg-white shadow-sm my-5 py-4">
+    <main class="container bg-white shadow-sm my-5 py-4 animationSideIn">
 
         <!--resumen de servicios-->
         <div class="container">
@@ -90,6 +90,7 @@
                     </form>
                 </div>
             </div>
+            <iframe width="100%" class="border" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7810.802752249952!2d-58.385265517057874!3d-34.60320015886511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1607987269852!5m2!1ses-419!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
     </main>
 
