--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="main-title text-center">
             Contabilidad S.A
         </div>
-        <div class="">
+        <div class="animationOut-In">
             <span class="saludos">Estamos para ayudarte</span>
         </div>
     </div>
@@ -91,7 +91,7 @@
                   </div>
                 </div>
             </div>
-            <a href="#" class="btn btn-main my-3">Ver todos</a>
+            <a href="info-areas.html" class="btn btn-main my-3">Ver todos</a>
         </div>
         <!--fin de resumen de servicios-->
 
@@ -101,10 +101,10 @@
                 NUESTRO EQUIPO
             </div>
             <div class="row my-5">
-                <div class="col-5 p-3 border shadow picture bg-light animationOut-In">
-                    <img src="./assets//imgs/team_work2.jpg" width="100%" alt="">
+                <div class="col-12 col-md-6 col-xl-5 p-3 border shadow picture bg-light animationOut-In">
+                    <img src="./assets//imgs/team_work2.jpg" width="100%" height="100%" alt="">
                 </div>
-                <div class="col-6">
+                <div class="col-12 my-2 col-md-6 col-xl-6">
                     <h2 class="border-bottom">El equipo de trabajo</h2>
                     <p class="text-secondary">Descripción.Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore consequatur iure quasi. Odit nobis ratione ipsum dicta labore rem rerum tenetur, natus eius suscipit recusandae facere explicabo eos maiores dolorem.</p>
                     <p class="text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut consequuntur doloremque quis nihil, nesciunt exercitationem voluptates aliquid porro magnam id mollitia sunt. Magni totam quaerat velit quo, sit nemo cumque?</p>
@@ -121,7 +121,7 @@
             <div class="row-cols-1 my-5">
                 <div class="col-12 p-2">
                     <div class="row justify-content-center">
-                        <div class="card mx-3" style="max-width: 540px;">
+                        <div class="card m-3" style="max-width: 540px;">
                             <div class="row g-0">
                               <div class="col-md-4">
                                 <img src="./assets/imgs/news1.jpg" width="100%" alt="...">
@@ -160,43 +160,39 @@
         </div>
         <!--fin de ultimas noticias-->
 
-        <div class="container-fluid my-5 final-info">
-            <div class="container p-2">
-                <div class="row p-2">
-                    <div class="col-6">
-                        <h3 class="border-bottom border-primary">Testimonios</h3>
-                        <div class="row flexbox-testi">
-                            <div class="col-4 testi">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, nesciunt?</p>
-                                <span class="user">- Usuario -</span>
-                            </div>
-                            <div class="col-4 testi">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, nesciunt?</p>
-                                <span class="user">- Usuario -</span>
-                            </div>
-                            <div class="col-4 testi">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, nesciunt?</p>
-                                <span class="user">- Usuario -</span>
-                            </div>
+        <div class="container p-2">
+            <div class="row p-2">
+                <div class="col-12 col-md-6 col-xl-7">
+                    <h3 class="border-bottom border-primary">Testimonios</h3>
+                    <div class="row flexbox-testi">
+                        <div class="col-12 testi">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, nesciunt?</p>
+                            <span class="user">- Usuario -</span>
+                        </div>
+                        <div class="col-12 testi">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, nesciunt?</p>
+                            <span class="user">- Usuario -</span>
+                        </div>
+                        <div class="col-12 testi">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, nesciunt?</p>
+                            <span class="user">- Usuario -</span>
                         </div>
                     </div>
-                    <div class="col-4 bg-main-blue text-white rounded">
-                        <h3 class="border-bottom p-2 border-light">Áreas de competencia</h3>
-                        <ul class="a-comp">
-                            <li class="my-3">Impuestos</li>
-                            <li class="my-3">Liquidaciones de Sueldos</li>
-                            <li class="my-3">Administración financiera</li>
-                            <li class="my-3">Selección de entidades</li>
-                            <li class="my-3">Software de contabilidad</li>
-                            <li class="my-3">Software de Asesoría</li>
-                            <li><a href="" class="btn btn-main">Ver Todas</a></li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-4 bg-main-blue text-white rounded">
+                    <h3 class="border-bottom p-2 border-light">Áreas de competencia</h3>
+                    <ul class="a-comp">
+                        <li class="my-3">Impuestos</li>
+                        <li class="my-3">Liquidaciones de Sueldos</li>
+                        <li class="my-3">Administración financiera</li>
+                        <li class="my-3">Selección de entidades</li>
+                        <li class="my-3">Software de contabilidad</li>
+                        <li class="my-3">Software de Asesoría</li>
+                        <li><a href="info-areas.html" class="btn btn-main">Ver Todas</a></li>
+                    </ul>
                 </div>
             </div>
-
         </div>
-
 
     </main>
 
@@ -205,7 +201,7 @@
             <div class="row">
                 <div class="info-footer col-12 my-4">
                     <div class="row justify-content-center">
-                        <div class="contacto-footer col-4">
+                        <div class="contacto-footer col-12 col-sm-6">
                             <h3>Contáctanos</h3>
                             <p>
                                 <ul>
@@ -217,7 +213,7 @@
                                 </ul>
                             </p>
                         </div>
-                        <div class="redes col-4">
+                        <div class="redes col-12 col-sm-4">
                             <h3>Encuentranos en</h3>
                             <div>
                                 <a href="#" class="mx-2"><img src="./assets/imgs/redes/fc.png" class="my-2" width="30px" title="Facebook" alt="facebook"></a>
