--- a/noticias.html
+++ b/noticias.html
@@ -42,7 +42,7 @@
 
     <!--Contenido princpial-->
 
-    <main class="container bg-white shadow-sm my-5 py-4">
+    <main class="container bg-white shadow-sm my-5 py-4 animationSideIn">
 
         <!--resumen de servicios-->
         <div class="container">
