diseño responsive en about, contacto,info-areas y noticias

--- a/info-areas.html
+++ b/info-areas.html
@@ -49,7 +49,7 @@
             <div class="title2">
                 ÁREAS DE COMPETENCIA
             </div>
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-12 p-3 text-secondary">
                     <p>
                         Descripción. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sit, illum suscipit ipsam sint ipsum dicta rem nisi earum vel beatae quo necessitatibus accusantium sequi optio, accusamus cupiditate iusto error.
@@ -58,7 +58,7 @@
 
                 <div class="row justify-content-center">
                     <!--carta-->
-                    <div class="col-3 border shadow bg-white p-2 m-2">
+                    <div class="col-12 col-md-5 col-xl-3 border shadow bg-white p-2 m-2">
                         <h4 class="border-bottom border-secondary">Impuestos</h4>
                         <p class="text-secondary">
                             Descripción.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet eos est iure quae pariatur aliquam tenetur error, voluptatibus reprehenderit dolores! Ipsum quo consequuntur iure, eum eligendi ipsa distinctio cumque quia?
@@ -68,7 +68,7 @@
                     <!--fin carta-->
 
                     <!--carta-->
-                    <div class="col-3 border shadow bg-white p-2 m-2">
+                    <div class="col-12 col-md-5 col-xl-3 border shadow bg-white p-2 m-2">
                         <h4 class="border-bottom border-secondary">Administración Financiera</h4>
                         <p class="text-secondary">
                             Descripción.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet eos est iure quae pariatur aliquam tenetur error, voluptatibus reprehenderit dolores! Ipsum quo consequuntur iure, eum eligendi ipsa distinctio cumque quia?
@@ -78,7 +78,7 @@
                     <!--fin carta-->
 
                     <!--carta-->
-                    <div class="col-3 border shadow bg-white p-2 m-2">
+                    <div class="col-12 col-md-5 col-xl-3 border shadow bg-white p-2 m-2">
                         <h4 class="border-bottom border-secondary">Asesoría</h4>
                         <p class="text-secondary">
                             Descripción.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet eos est iure quae pariatur aliquam tenetur error, voluptatibus reprehenderit dolores! Ipsum quo consequuntur iure, eum eligendi ipsa distinctio cumque quia?
@@ -88,7 +88,7 @@
                     <!--fin carta-->
 
                     <!--carta-->
-                    <div class="col-3 border shadow bg-white p-2 m-2">
+                    <div class="col-12 col-md-5 col-xl-3 border shadow bg-white p-2 m-2">
                         <h4 class="border-bottom border-secondary">Liquidaciones de sueldos</h4>
                         <p class="text-secondary">
                             Descripción.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet eos est iure quae pariatur aliquam tenetur error, voluptatibus reprehenderit dolores! Ipsum quo consequuntur iure, eum eligendi ipsa distinctio cumque quia?
@@ -98,7 +98,7 @@
                     <!--fin carta-->
 
                     <!--carta-->
-                    <div class="col-3 border shadow bg-white p-2 m-2">
+                    <div class="col-12 col-md-5 col-xl-3 border shadow bg-white p-2 m-2">
                         <h4 class="border-bottom border-secondary">Software de contabilidad</h4>
                         <p class="text-secondary">
                             Descripción.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet eos est iure quae pariatur aliquam tenetur error, voluptatibus reprehenderit dolores! Ipsum quo consequuntur iure, eum eligendi ipsa distinctio cumque quia?
@@ -108,7 +108,7 @@
                     <!--fin carta-->
 
                     <!--carta-->
-                    <div class="col-3 border shadow bg-white p-2 m-2">
+                    <div class="col-12 col-md-5 col-xl-3 border shadow bg-white p-2 m-2">
                         <h4 class="border-bottom border-secondary">Selección de entidades</h4>
                         <p class="text-secondary">
                             Descripción.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet eos est iure quae pariatur aliquam tenetur error, voluptatibus reprehenderit dolores! Ipsum quo consequuntur iure, eum eligendi ipsa distinctio cumque quia?
@@ -131,7 +131,7 @@
             <div class="row">
                 <div class="info-footer col-12 my-4">
                     <div class="row justify-content-center">
-                        <div class="contacto-footer col-4">
+                        <div class="contacto-footer col-12 col-sm-6 col-xl-4">
                             <h3>Contáctanos</h3>
                             <p>
                                 <ul>
@@ -143,7 +143,7 @@
                                 </ul>
                             </p>
                         </div>
-                        <div class="redes col-4">
+                        <div class="redes col-12 col-sm-6 col-xl-3">
                             <h3>Encuentranos en</h3>
                             <div>
                                 <a href="#" class="mx-2"><img src="./assets/imgs/redes/fc.png" class="my-2" width="30px" title="Facebook" alt="facebook"></a>
@@ -151,6 +151,7 @@
                                 <a href="#" class="mx-2"><img src="./assets/imgs/redes/ln.png" class="my-2" width="30px" title="Linkedin" alt="linkedin"></a>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
                 <div class="footer col-12 text-center">
