--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 QUIÉNES SOMOS
             </div>
             <div class="row my-4">
-                <div class="col-4 border rounded p-3 mx-1 bg-white">
+                <div class="col-12 col-md-12 col-lg-5 col-xl-4 border rounded p-3 m-1 bg-white">
                     <div class="photoStyle my-4">
                         <img src="./assets/director-example.jpg" width="100%" height="100%" alt="...">
                     </div>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <div class="col-4 border rounded p-3 mx-1 bg-white">
+                <div class="col-12 col-md-12 col-lg-6 col-xl-4 border rounded p-3 m-1 bg-white">
                     <div class="photoStyle my-4">
                         <img src="./assets/imgs/team_work2.jpg" width="100%" height="100%" alt="...">
                     </div>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
 
-                <div class="col-3 border rounded p-3 mx-1 bg-white">
+                <div class="col-12 col-xl-3 border rounded p-3 m-1 bg-white">
                     <div>
                         <div class="bg-main firma my-2"> Contabilidad S.A </div>
                         <h4 class="border-bottom border-primary">Nuestra Firma</h4>
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="info-footer col-12 my-4">
                     <div class="row justify-content-center">
-                        <div class="contacto-footer col-4">
+                        <div class="contacto-footer col-12 col-sm-6 col-xl-4">
                             <h3>Contáctanos</h3>
                             <p>
                                 <ul>
@@ -108,7 +108,7 @@
                                 </ul>
                             </p>
                         </div>
-                        <div class="redes col-4">
+                        <div class="redes col-12 col-sm-6 col-xl-3">
                             <h3>Encuentranos en</h3>
                             <div>
                                 <a href="#" class="mx-2"><img src="./assets/imgs/redes/fc.png" class="my-2" width="30px" title="Facebook" alt="facebook"></a>
@@ -116,6 +116,7 @@
                                 <a href="#" class="mx-2"><img src="./assets/imgs/redes/ln.png" class="my-2" width="30px" title="Linkedin" alt="linkedin"></a>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
                 <div class="footer col-12 text-center">
