--- a/contacto.html
+++ b/contacto.html
@@ -54,7 +54,7 @@
             </p>
 
             <div class="row">
-                <div class="col-4 m-3">
+                <div class="col-12 col-md-4 col-xl-5 m-3">
                     <h4>Dirección</h4>
                     <p>
                         <ul class="text-secondary">
@@ -70,7 +70,7 @@
                         </ul>
                     </p>
                 </div>
-                <div class="col-5 m-3">
+                <div class="col-12 col-md-6 col-xl-5 m-3">
                     <h4>Envíarnos un mensaje</h4>
                     <form action="" class="form-group">
                         <div class="input-group input-group mb-3">
@@ -83,14 +83,16 @@
                             <input type="text" class="form-control" placeholder="Teléfono">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
                             <textarea class="form-control" id="textArea" placeholder="Mensaje..." rows="3"></textarea>
                         </div>
                         <button type="submit" class="btn btn-main btn-lg">Enviar</button>
                     </form>
                 </div>
+                <div class="col-12">
+                    <iframe width="100%" class="border" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7810.802752249952!2d-58.385265517057874!3d-34.60320015886511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1607987269852!5m2!1ses-419!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
             </div>
-            <iframe width="100%" class="border" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7810.802752249952!2d-58.385265517057874!3d-34.60320015886511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1607987269852!5m2!1ses-419!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            
         </div>
     </main>
 
@@ -99,7 +101,7 @@
             <div class="row">
                 <div class="info-footer col-12 my-4">
                     <div class="row justify-content-center">
-                        <div class="contacto-footer col-4">
+                        <div class="contacto-footer col-12 col-sm-6 col-xl-4">
                             <h3>Contáctanos</h3>
                             <p>
                                 <ul>
@@ -111,7 +113,7 @@
                                 </ul>
                             </p>
                         </div>
-                        <div class="redes col-4">
+                        <div class="redes col-12 col-sm-6 col-xl-3">
                             <h3>Encuentranos en</h3>
                             <div>
                                 <a href="#" class="mx-2"><img src="./assets/imgs/redes/fc.png" class="my-2" width="30px" title="Facebook" alt="facebook"></a>
@@ -119,6 +121,7 @@
                                 <a href="#" class="mx-2"><img src="./assets/imgs/redes/ln.png" class="my-2" width="30px" title="Linkedin" alt="linkedin"></a>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
                 <div class="footer col-12 text-center">
