--- a/noticias.html
+++ b/noticias.html
@@ -57,11 +57,11 @@
                 <div class="col-12">
                     <!--carta de noticia-->
                     <div class="row p-2 my-3">
-                        <div class="img-card col-4">
+                        <div class="img-card col-12 col-xl-4">
                             <img src="./assets/imgs/news1.jpg" width="100%" height="100%" alt="...">
                         </div>
-                        <div class="descripcion col-6">
-                            <h3 class="border-bottom border-secondary">Noticia 1 - Título</h3>
+                        <div class="descripcion col-12 col-xl-6">
+                            <h3 class="border-bottom border-secondary my-2">Noticia 1 - Título</h3>
                             <p class="text-secondary">
                                 descripción. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, error. Deleniti vitae dicta quasi, animi impedit ad quos, omnis eaque debitis qui alias dolore eos consequatur quo. Officia, dolorum dicta?
                             </p>
@@ -75,11 +75,11 @@
 
                     <!--carta de noticia-->
                     <div class="row p-2 my-3">
-                        <div class="img-card col-4">
+                        <div class="img-card col-12 col-xl-4">
                             <img src="./assets/imgs/news2.jpg" width="100%" height="100%" alt="...">
                         </div>
-                        <div class="descripcion col-6">
-                            <h3 class="border-bottom border-secondary">Noticia 2 - Título</h3>
+                        <div class="descripcion col-12 col-xl-6">
+                            <h3 class="border-bottom border-secondary my-2">Noticia 2 - Título</h3>
                             <p class="text-secondary">
                                 descripción. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, error. Deleniti vitae dicta quasi, animi impedit ad quos, omnis eaque debitis qui alias dolore eos consequatur quo. Officia, dolorum dicta?
                             </p>
@@ -93,11 +93,11 @@
 
                      <!--carta de noticia-->
                      <div class="row p-2 my-3">
-                        <div class="img-card col-4">
+                        <div class="img-card col-12 col-xl-4">
                             <img src="./assets/imgs/photo1.jpg" width="100%" height="100%" alt="...">
                         </div>
-                        <div class="descripcion col-6">
-                            <h3 class="border-bottom border-secondary">Noticia 3 - Título</h3>
+                        <div class="descripcion col-12 col-xl-6">
+                            <h3 class="border-bottom border-secondary my-2">Noticia 3 - Título</h3>
                             <p class="text-secondary">
                                 descripción. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, error. Deleniti vitae dicta quasi, animi impedit ad quos, omnis eaque debitis qui alias dolore eos consequatur quo. Officia, dolorum dicta?
                             </p>
@@ -120,7 +120,7 @@
             <div class="row">
                 <div class="info-footer col-12 my-4">
                     <div class="row justify-content-center">
-                        <div class="contacto-footer col-4">
+                        <div class="contacto-footer col-12 col-sm-6 col-xl-4">
                             <h3>Contáctanos</h3>
                             <p>
                                 <ul>
@@ -132,7 +132,7 @@
                                 </ul>
                             </p>
                         </div>
-                        <div class="redes col-4">
+                        <div class="redes col-12 col-sm-6 col-xl-3">
                             <h3>Encuentranos en</h3>
                             <div>
                                 <a href="#" class="mx-2"><img src="./assets/imgs/redes/fc.png" class="my-2" width="30px" title="Facebook" alt="facebook"></a>
@@ -140,6 +140,7 @@
                                 <a href="#" class="mx-2"><img src="./assets/imgs/redes/ln.png" class="my-2" width="30px" title="Linkedin" alt="linkedin"></a>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
                 <div class="footer col-12 text-center">
