botón de menú responsivo

--- a/about.html
+++ b/about.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="./css/aboutStyles.css"> 
 </head>
 <body class="bg-light">
+    
+    <a href="#" class="button-nav-bar">
+        <img src="./assets/btn-menu.png" width=50px" alt="...">
+    </a>
+
     <header class="container-fluid bg-main">
         <div class="banner font-main text-white">
             <a href="#" class="text-white">Contabilidad S.A</a>
