--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 </head>
 <body class="bg-light">
     
+    <a href="#" class="button-nav-bar">
+        <img src="./assets/btn-menu.png" width=50px" alt="...">
+    </a>
     <!--Header-->
     <header class="container-fluid bg-main">
         <div class="banner font-main text-white">
             <a href="#" class="text-white">Contabilidad S.A</a>
         </div>
     </header>
-    <div class="nav-bar">
+    <div class="nav-bar" id="navBar">
         <ul class="nav justify-content-center">
             <li class="nav-item my-2">
               <a class="nav-link-main" href="index.html">INICIO</a>
