--- a/info-areas.html
+++ b/info-areas.html
@@ -13,6 +13,9 @@
 </head>
 <body class="bg-light">
     
+    <a href="#" class="button-nav-bar">
+        <img src="./assets/btn-menu.png" width=50px" alt="...">
+    </a>
     <!--Header-->
     <header class="container-fluid bg-main">
         <div class="banner font-main text-white">
