--- a/contacto.html
+++ b/contacto.html
@@ -13,9 +13,35 @@
 </head>
 <body class="bg-light">
     
-    <a href="#" class="button-nav-bar">
+    <a href="#" class="button-nav-bar" id="boton-menu">
         <img src="./assets/btn-menu.png" width=50px" alt="...">
     </a>
+
+    <!--Menú responsivo-->
+        <div class="menu-responsive" id="menu-responsive">
+            <ul class="nav flex-column align-items-center">
+                <li class="nav-item my-3">
+                    <a class="nav-link-main" href="index.html">INICIO</a>
+                </li>
+                <li class="nav-item my-3">
+                    <a class="nav-link-main" href="about.html">QUIÉNES SOMOS</a>
+                </li>
+                <li class="nav-item my-3">
+                    <a class="nav-link-main" href="info-areas.html">ÁREAS DE COMPETENCIA</a>
+                </li>
+                <li class="nav-item my-3">
+                    <a class="nav-link-main" href="noticias.html">NOTICIAS</a>
+                </li>
+                <li class="nav-item my-3">
+                    <a class="nav-link-main" href="contacto.html">CONTACTO</a>
+                </li>
+                <li class="nav-item my-3">
+                    <a class="nav-link-main" href="#" id="botonCerrar">CERRAR</a>
+                </li>
+              </ul>
+        </div>
+    <!--fin menú responsivo-->
+
     <!--Header-->
     <header class="container-fluid bg-main">
         <div class="banner font-main text-white">
@@ -45,7 +71,7 @@
 
     <!--Contenido princpial-->
 
-    <main class="container bg-white shadow-sm my-5 py-4 animationSideIn">
+    <main class="container bg-white shadow-sm my-5 py-4">
 
         <!--resumen de servicios-->
         <div class="container">
@@ -138,5 +164,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
