--- a/contacto.html
+++ b/contacto.html
@@ -48,7 +48,7 @@
             <a href="#" class="text-white">Contabilidad S.A</a>
         </div>
     </header>
-    <div class="nav-bar">
+    <div class="nav-bar shadow" id="navBar">
         <ul class="nav justify-content-center">
             <li class="nav-item my-2">
               <a class="nav-link-main" href="index.html">INICIO</a>
