--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="#" class="text-white">Contabilidad S.A</a>
         </div>
     </header>
-    <div class="nav-bar" id="navBar">
+    <div class="nav-bar shadow" id="navBar">
         <ul class="nav justify-content-center">
             <li class="nav-item my-2">
               <a class="nav-link-main" href="index.html">INICIO</a>
@@ -68,7 +68,7 @@
         </ul>
     </div>
     <!--fin del header-->
-    <div class="presentacion container-fluid">
+    <div class="presentacion container-fluid" id="presentacion">
         <div class="main-title text-center">
             Contabilidad S.A
         </div>
