animaciones según el scroll en cajas

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="main-title text-center">
             Contabilidad S.A
         </div>
-        <div class="animationOut-In">
+        <div>
             <span class="saludos">Estamos para ayudarte</span>
         </div>
     </div>
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="container my-5 position-relative">
-            <div class="row row-cols-1 row-cols-md-3 g-4 animationSideIn">
+            <div class="row row-cols-1 row-cols-md-3 g-4" id="cajaAnimationIn">
                 <div class="col">
                   <div class="card shadow-sm">
                     <img src="./assets/imgs/photo1.jpg" class="card-img-top" alt="...">
@@ -130,7 +130,7 @@
                 NUESTRO EQUIPO
             </div>
             <div class="row my-5">
-                <div class="col-12 col-md-6 col-xl-5 p-3 border shadow picture bg-light animationOut-In">
+                <div class="col-12 col-md-6 col-xl-5 p-3 border shadow picture bg-light" id="cajaAnimationOut-In">
                     <img src="./assets//imgs/team_work2.jpg" width="100%" height="100%" alt="">
                 </div>
                 <div class="col-12 my-2 col-md-6 col-xl-6">
