tamaño de la carta noticias en el index modificada

--- a/index.html
+++ b/index.html
@@ -167,17 +167,18 @@
                             </div>
                         </div>
 
-                        <div class="card mx-3" style="max-width: 540px;">
+                        <div class="card m-3" style="max-width: 540px;">
                             <div class="row g-0">
                               <div class="col-md-4">
                                 <img src="./assets/imgs/news2.jpg" width="100%" alt="...">
                               </div>
                               <div class="col-md-8">
                                 <div class="card-body">
-                                  <h5 class="card-title"><strong>Noticia 2</strong></h5>
+                                  <h5 class="card-title"><strong>Noticia 1</strong></h5>
                                   <p class="card-text text-secondary">Descripción. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo adipisci, animi at sit nostrum voluptas!</p>
-                                  <p class="card-text"><small class="text-muted">Publicada hace 1 Día</small></p>
+                                  <p class="card-text"><small class="text-muted">Publicada hace 9 horas</small></p>
                                   <a href="#" class="btn btn-main">ver</a>
+                                  
                                 </div>
                               </div>
                             </div>
